fixed nav and footer alignment

--- a/src/styles/componentStyles/footer.module.scss
+++ b/src/styles/componentStyles/footer.module.scss
@@ -7,12 +7,12 @@
     color: white;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-bottom: 25px;
 }
 
 .title {
-    padding-left: 15px;
+    padding-left: 25px;
     h1 {
         font-family: 'Lato', sans-serif;
         margin: 0;
@@ -28,6 +28,10 @@
 }
 
 .pages {
+    a{
+        text-decoration: none;
+    }
+    margin-right: 25px;
     h1 {
         font-family: "Lato", sans-serif;
         font-size: 25px;
@@ -35,28 +39,28 @@
         padding-bottom: 7px;
         margin-right: 20px;
         margin-bottom: 10px;
+        text-align: right;
     }
     width: 300px;
     ul {
-        a{
+        li{
             text-decoration: none;
             color: white;
+            text-align: right;
+            margin-right: 25px;
         }
-
         list-style-type: none;
         margin: 0;
         font-family: "Quicksand", sans-serif;
     }
 
     ul:hover {
-        a {
+        li{
             color: grey;
             transition: 0.2s;
         }
         li:hover {
-            a {
-                color: white;
-            }
+            color: white;
         }
     }
 
@@ -82,19 +86,34 @@
     
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 800px) {
     .title {
-        width: 900px;
-        padding-left: 50px;
         padding-bottom: 40px;
+        padding-left: 0;
     }
 
     .pages {
         padding-left: 50px;
-        width: 40vw;
+        margin: 0;
     }
 
     .footer {
-        justify-content: flex-start;
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 618px) {
+    .pages{
+        h1{
+            text-align: center;
+            margin: 0;
+        }
+        ul{
+            li{
+                text-align: center;
+                margin-right: 0;
+            }
+        }
+        padding: 0;
     }
 }
