--- a/src/styles/componentStyles/header.module.scss
+++ b/src/styles/componentStyles/header.module.scss
@@ -7,7 +7,7 @@
     margin: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     z-index: 3;
@@ -16,6 +16,7 @@
 
 .name {
     text-align: left;
+    padding-left: 25px;
 }
 
 .title {
@@ -31,6 +32,7 @@
     justify-content: center;
     list-style-type: none;
     margin: 0;
+    padding-right: 25px;
 }
 
 
